--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Le Joy - Accueil</title>
+    <title>Le Joy - Contact</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
+
+        <!-- DESKTOP NAV -->
+
+        <div class="header_navbar_desktop">
+
+            <nav class="desktop_nav">
+                <a href="/index.html"><img src="/Images/Logo_NB_Avec_Baseline.png" alt="logo JOY" id="header_logo"></a>
+                <ul class="ul_desktop">
+                    <li><a href="/index.html">Accueil</a></li>
+                    <li><a href="/cartes.html">Carte</a></li>
+                    <li><a href="/a_propos.html">A propos</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <a href="https://www.thefork.fr/restaurant/le-joy-r3214" target="_blank"><button
+                    id="cta_btn_desktop">Réserver</button></a>
+        </div>
+
+        <!-- MOBILE NAV -->
+
         <div class="header_navbar">
             <label for="ch" id="lab">
                 <span class="line"></span>
@@ -18,7 +38,7 @@
                 <span class="line"></span>
             </label>
             <input type="checkbox" id="ch">
-            <nav>
+            <nav class="nav_mobile">
                 <img src="/Images/Logo_Crème_Sans_Baseline.png" alt="logo JOY" id="burgermenu_logo">
                 <a href="/index.html">Accueil</a>
                 <div class="hr_container_bgmenu">
@@ -45,36 +65,35 @@
                 </div>
                 <p class="paragraph_bgmenu">Joy, 2023 - Tous droits réservés</p>
             </nav>
-            <img src="/Images/Logo_NB_Avec_Baseline.png" alt="logo JOY" id="header_logo">
+            <a href="/index.html"><img src="/Images/Logo_NB_Avec_Baseline.png" alt="logo JOY" id="header_logo"></a>
         </div>
     </header>
     <div class="content">
-        <h1 class="title">Bienvenue !</h1>
-        <img src="./Images/photo-1517248135467-4c7edcad34c4.avif" alt="intérieur du restaurant">
-        <h2 class="sub_title">Le restaurant JOY</h2>
-        <p class="paragraph">Bienvenue au Joy, un restaurant créatif et accueillant qui propose une cuisine potagère
-            française inspirée
-            des produits de saison. Notre carte courte comprend des entrées, des petits plats et des desserts parfait
-            pour la dégustation et le partage. En été, profitez de notre jolie terrasse, tandis qu'en hiver, le
-            rez-de-chaussée et l'étage sont ouverts pour vous offrir la meilleure expérience culinaire.
-
-            Chez Joy, nous sommes des fermes défenseurs du commerce éco conscient, ce qui signifie que nous
-            sélectionnons nos produits et fournisseurs avec soin, en priorisant le saisonnier et l'économie locale.
-            Notre carte flexivore met à l'honneur les légumes de saison, des viandes, volailles et poissons de qualité.
-            Notre objectif est de proposer une cuisine responsable et accessible à tous.</p>
+        <h1 class="title">Contact</h1>
+        <img src="./Images/img_top_contact.jpg" alt="intérieur du restaurant" id="img_top">
+        <div class="contact_informations">
+            <h2 class="sub_title">Restaurant JOY</h2>
+            <div>
+                <p class="paragraph">14 Rue de la Nature</p>
+                <p class="paragraph">75001 Paris</p>
+            </div>
+            <div>
+                <p class="paragraph">01 23 45 67 89</p>
+                <p class="paragraph">contact@joy-restaurant.fr</p>
+            </div>
+            <h3 class="sub_sub_title">Horaires</h3>
+            <div>
+                <p class="paragraph">Mardi - Samedi : 12h00 - 14h30 et 19h00 - 22h30</p>
+                <p class="paragraph">Dimanche - Lundi : fermé</p>
+            </div>
+        </div>
         <div class="hr_container">
             <hr class="rounded">
         </div>
-        <h2 class="sub_title">Le concept</h2>
-        <p class="paragraph">Le Joy est né en septembre 2022 en pleine crise de Covid-19. Notre ambition est de prendre
-            part à la
-            restauration de demain en proposant une cuisine responsable, soucieuse et accessible à tous. Chez Joy, nous
-            croyons en l'authenticité et au plaisir de consommer des produits locaux. Nous sommes dynamiques, inclusifs
-            et pédagogiques dans notre discours et nous souhaitons établir une relation de proximité avec nos clients
-            tout en respectant nos fournisseurs locaux.
-
-            Nous sommes également passionnés par la culture et organisons des événements pour la rendre accessible au
-            plus grand nombre. Rejoignez nous chez Joy pour découvrir une cuisine responsable et délicieuse.</p>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10497.298101933107!2d2.3013355!3d48.8710897!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fc20c21e081%3A0xe363d1ed12762de1!2sLe%20Joy!5e0!3m2!1sfr!2sfr!4v1686240514171!5m2!1sfr!2sfr"
+            width=auto height="400" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="hr_container">
             <hr class="rounded">
         </div>
@@ -82,18 +101,22 @@
             <button onclick="window.location.href='https://www.thefork.fr/restaurant/le-joy-r3214';"
                 id="cta_btn">Réserver</button>
         </div>
-        <div class="hr_container">
+        <div class="hr_container" id="last_spacer">
             <hr class="rounded">
         </div>
-        <img src="./Images/saumon_by_CA_Creative.jpg" alt="Spacer_HQ">
+        <img src="./Images/img_bottom_contact.jpg" alt="haricots verts, semoule et poisson" id="btm_img_contact">
     </div>
 
     <footer>
+
+        <!-------------- MOBILE FOOTER -------------->
+
         <div class="footer_container">
             <div class="footer_logo">
                 <img src="./Images/Logo_Crème_Sans_Baseline.png" alt="logo_JOY">
             </div>
-            <p class="paragraph">Pour réserver une table ou pour toute question, appelez nous au 01.23.45.67.89 ou
+            <p class="paragraph" id="text_mobile">Pour réserver une table ou pour toute question, appelez nous au
+                01.23.45.67.89 ou
                 envoyez nous un e-mail
                 à contact@joy-restaurant.fr</p>
 
@@ -104,14 +127,14 @@
 
             <div class="grid_container">
                 <div class="cell">
-                    <h2><a href="/index.html">Accueil</a></h2>
+                    <h2 class="sub_title"><a href="/index.html">Accueil</a></h2>
                     <ul class="list_footer">
                         <li><a href="#">Le restaurant</a></li>
                         <li><a href="#">Le concept</a></li>
                     </ul>
                 </div>
                 <div class="cell">
-                    <h2><a href="/cartes.html">Carte</a></h2>
+                    <h2 class="sub_title"><a href="/cartes.html">Carte</a></h2>
                     <ul class="list_footer">
                         <li><a href="#">Apéritifs</a></li>
                         <li><a href="#">Entrées</a></li>
@@ -121,7 +144,7 @@
                     </ul>
                 </div>
                 <div class="cell">
-                    <h2><a href="/a_propos.html">A propos</a></h2>
+                    <h2 class="sub_title"><a href="/a_propos.html">A propos</a></h2>
                     <ul class="list_footer">
                         <li><a href="#">Joy & l'écologie</a></li>
                         <li><a href="#">Joy & la culture</a></li>
@@ -129,7 +152,7 @@
                     </ul>
                 </div>
                 <div class="cell">
-                    <h2><a href="/contact.html">Contact</a></h2>
+                    <h2 class="sub_title"><a href="/contact.html">Contact</a></h2>
                     <ul class="list_footer">
                         <li><a href="#">Adresse</a></li>
                         <li><a href="#">Coordonnées</a></li>
@@ -137,6 +160,7 @@
                     </ul>
                 </div>
             </div>
+
             <div class="social_media">
                 <div>
                     <h2 class="sub_title">Rejoignez nous !</h2>
@@ -147,6 +171,51 @@
                     <a href="#"><img src="./Images/icon_facebook.svg" alt="social_media_facebook"></a>
                 </div>
             </div>
+
+            <!-------------- DESKTOP FOOTER -------------->
+
+            <div id="social_media_menu">
+                <div class="social_media_desktop">
+                    <img src="./Images/Logo_Crème_Sans_Baseline.png" alt="logo_JOY" class="logo_joy_social_media">
+                    <div>
+                        <h2 class="sub_title">Rejoignez nous !</h2>
+                    </div>
+                    <div class="social_media_icn_desktop">
+                        <a href="#"><img src="./Images/icon_instagram.svg" alt="social_media_instagram"></a>
+                        <a href="#"><img src="./Images/icon_linkedin.svg" alt="social_media_linkedin"></a>
+                        <a href="#"><img src="./Images/icon_facebook.svg" alt="social_media_facebook"></a>
+                    </div>
+                </div>
+                <div id="menu_footer_desktop">
+                    <div class="menu_card_desktop">
+                        <h3 class="h3_desktop"><a href="/index.html">Accueil</a></h3>
+                        <p class="p_desktop">Le restaurant</p>
+                        <p class="p_desktop">Le restaurant</p>
+                    </div>
+                    <div class="menu_card_desktop">
+                        <h3 class="h3_desktop"><a href="/cartes.html">Notre carte</a></h3>
+                        <p class="p_desktop">Apéritifs</p>
+                        <p class="p_desktop">Entrées</p>
+                        <p class="p_desktop">Plats</p>
+                        <p class="p_desktop">Desserts</p>
+                        <p class="p_desktop">Boissons</p>
+                    </div>
+                    <div class="menu_card_desktop">
+                        <h3 class="h3_desktop"><a href="/a_propos.html">A propos</a></h3>
+                        <p class="p_desktop">Joy & l'écologie</p>
+                        <p class="p_desktop">Joy & la culture</p>
+                        <p class="p_desktop">Partenaires</p>
+                    </div>
+                    <div class="menu_card_desktop">
+                        <h3 class="h3_desktop"><a href="/contact.html">Contact</a></h3>
+                        <p class="p_desktop">Adresse</p>
+                        <p class="p_desktop">Coordonnées</p>
+                        <p class="p_desktop">Horaires</p>
+                    </div>
+                </div>
+            </div>
+
+
             <p class="paragraph">Joy, 2023 - Tous droits réservés</p>
         </div>
     </footer>
