--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
 
 <body>
     <header>
+
+        <!-- DESKTOP NAV -->
+
+        <div class="header_navbar_desktop">
+
+            <nav class="desktop_nav">
+                <a href="/index.html"><img src="/Images/Logo_NB_Avec_Baseline.png" alt="logo JOY" id="header_logo"></a>
+                <ul class="ul_desktop">
+                    <li><a href="/index.html">Accueil</a></li>
+                    <li><a href="/cartes.html">Carte</a></li>
+                    <li><a href="/a_propos.html">A propos</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <a href="https://www.thefork.fr/restaurant/le-joy-r3214" target="_blank"><button
+                    id="cta_btn_desktop">Réserver</button></a>
+        </div>
+
+        <!-- MOBILE NAV -->
+
         <div class="header_navbar">
             <label for="ch" id="lab">
                 <span class="line"></span>
@@ -18,7 +38,7 @@
                 <span class="line"></span>
             </label>
             <input type="checkbox" id="ch">
-            <nav>
+            <nav class="nav_mobile">
                 <img src="/Images/Logo_Crème_Sans_Baseline.png" alt="logo JOY" id="burgermenu_logo">
                 <a href="/index.html">Accueil</a>
                 <div class="hr_container_bgmenu">
@@ -45,12 +65,12 @@
                 </div>
                 <p class="paragraph_bgmenu">Joy, 2023 - Tous droits réservés</p>
             </nav>
-            <img src="/Images/Logo_NB_Avec_Baseline.png" alt="logo JOY" id="header_logo">
+            <a href="/index.html"><img src="/Images/Logo_NB_Avec_Baseline.png" alt="logo JOY" id="header_logo"></a>
         </div>
     </header>
     <div class="content">
         <h1 class="title">Bienvenue !</h1>
-        <img src="./Images/photo-1517248135467-4c7edcad34c4.avif" alt="intérieur du restaurant">
+        <img src="./Images/photo-1517248135467-4c7edcad34c4.avif" alt="intérieur du restaurant" id="img_top">
         <h2 class="sub_title">Le restaurant JOY</h2>
         <p class="paragraph">Bienvenue au Joy, un restaurant créatif et accueillant qui propose une cuisine potagère
             française inspirée
@@ -81,39 +101,42 @@
             <hr class="rounded">
         </div>
         <div class="cta_btn">
-            <button onclick="window.location.href='https://www.thefork.fr/restaurant/le-joy-r3214';"
+            <button type="button" onclick="window.location.href='https://www.thefork.fr/restaurant/le-joy-r3214';"
                 id="cta_btn">Réserver</button>
         </div>
-        <div class="hr_container">
+        <div class="hr_container" id="last_spacer">
             <hr class="rounded">
         </div>
-        <img src="./Images/saumon_by_CA_Creative.jpg" alt="Spacer_HQ" id="btm_img_accueil">
+        <img src="./Images/img_bottom_accueil.jpg" alt="Saumon et ses légumes" id="btm_img_accueil">
     </div>
 
     <footer>
+
+        <!-------------- MOBILE FOOTER -------------->
         <div class="footer_container">
             <div class="footer_logo">
                 <img src="./Images/Logo_Crème_Sans_Baseline.png" alt="logo_JOY">
             </div>
-            <p class="paragraph">Pour réserver une table ou pour toute question, appelez nous au 01.23.45.67.89 ou
+            <p class="paragraph" id="text_mobile">Pour réserver une table ou pour toute question, appelez nous au
+                01.23.45.67.89 ou
                 envoyez nous un e-mail
                 à contact@joy-restaurant.fr</p>
 
             <div class="sub_bar">
                 <input type="email" id="sub_email" name="sub_email" placeholder="Email">
-                <button id="sub_btn">Souscrire</button>
+                <button type="button" id="sub_btn">Souscrire</button>
             </div>
 
             <div class="grid_container">
                 <div class="cell">
-                    <h2><a href="/index.html">Accueil</a></h2>
+                    <h2 class="sub_title"><a href="/index.html">Accueil</a></h2>
                     <ul class="list_footer">
                         <li><a href="#">Le restaurant</a></li>
                         <li><a href="#">Le concept</a></li>
                     </ul>
                 </div>
                 <div class="cell">
-                    <h2><a href="/cartes.html">Carte</a></h2>
+                    <h2 class="sub_title"><a href="/cartes.html">Carte</a></h2>
                     <ul class="list_footer">
                         <li><a href="#">Apéritifs</a></li>
                         <li><a href="#">Entrées</a></li>
@@ -123,7 +146,7 @@
                     </ul>
                 </div>
                 <div class="cell">
-                    <h2><a href="/a_propos.html">A propos</a></h2>
+                    <h2 class="sub_title"><a href="/a_propos.html">A propos</a></h2>
                     <ul class="list_footer">
                         <li><a href="#">Joy & l'écologie</a></li>
                         <li><a href="#">Joy & la culture</a></li>
@@ -131,7 +154,7 @@
                     </ul>
                 </div>
                 <div class="cell">
-                    <h2><a href="/contact.html">Contact</a></h2>
+                    <h2 class="sub_title"><a href="/contact.html">Contact</a></h2>
                     <ul class="list_footer">
                         <li><a href="#">Adresse</a></li>
                         <li><a href="#">Coordonnées</a></li>
@@ -139,6 +162,7 @@
                     </ul>
                 </div>
             </div>
+
             <div class="social_media">
                 <div>
                     <h2 class="sub_title">Rejoignez nous !</h2>
@@ -149,6 +173,51 @@
                     <a href="#"><img src="./Images/icon_facebook.svg" alt="social_media_facebook"></a>
                 </div>
             </div>
+
+            <!-------------- DESKTOP FOOTER -------------->
+
+            <div id="social_media_menu">
+                <div class="social_media_desktop">
+                    <img src="./Images/Logo_Crème_Sans_Baseline.png" alt="logo_JOY" class="logo_joy_social_media">
+                    <div>
+                        <h2 class="sub_title">Rejoignez nous !</h2>
+                    </div>
+                    <div class="social_media_icn_desktop">
+                        <a href="#"><img src="./Images/icon_instagram.svg" alt="social_media_instagram"></a>
+                        <a href="#"><img src="./Images/icon_linkedin.svg" alt="social_media_linkedin"></a>
+                        <a href="#"><img src="./Images/icon_facebook.svg" alt="social_media_facebook"></a>
+                    </div>
+                </div>
+                <div id="menu_footer_desktop">
+                    <div class="menu_card_desktop">
+                        <h3 class="h3_desktop"><a href="/index.html">Accueil</a></h3>
+                        <p class="p_desktop">Le restaurant</p>
+                        <p class="p_desktop">Le restaurant</p>
+                    </div>
+                    <div class="menu_card_desktop">
+                        <h3 class="h3_desktop"><a href="/cartes.html">Notre carte</a></h3>
+                        <p class="p_desktop">Apéritifs</p>
+                        <p class="p_desktop">Entrées</p>
+                        <p class="p_desktop">Plats</p>
+                        <p class="p_desktop">Desserts</p>
+                        <p class="p_desktop">Boissons</p>
+                    </div>
+                    <div class="menu_card_desktop">
+                        <h3 class="h3_desktop"><a href="/a_propos.html">A propos</a></h3>
+                        <p class="p_desktop">Joy & l'écologie</p>
+                        <p class="p_desktop">Joy & la culture</p>
+                        <p class="p_desktop">Partenaires</p>
+                    </div>
+                    <div class="menu_card_desktop">
+                        <h3 class="h3_desktop"><a href="/contact.html">Contact</a></h3>
+                        <p class="p_desktop">Adresse</p>
+                        <p class="p_desktop">Coordonnées</p>
+                        <p class="p_desktop">Horaires</p>
+                    </div>
+                </div>
+            </div>
+
+
             <p class="paragraph">Joy, 2023 - Tous droits réservés</p>
         </div>
     </footer>
